--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,16 +31,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  json_serializable: ^6.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^1.24.0
+  freezed: ^2.1.1
+  freezed_annotation: ^2.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.11
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
